--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -3,157 +3,216 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".ui.record.RecordFragment">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:orientation="horizontal"
+        app:flow_horizontalAlign="center"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/emblema_one"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:text="WR"
+            android:textColor="@color/white"
+            android:textSize="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/mapsLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/layout_toolbar"
+        app:layout_constraintVertical_bias="0.0">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/mapsLayout">
 
             <TextView
                 android:id="@+id/tvListViewItemRecordDistanceTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
                 android:fontFamily="@font/rubik_one"
-                android:text="6.4km"
+                android:text="0.0km"
                 android:textColor="@color/black"
                 android:textSize="30sp" />
+
             <TableLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center">
 
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_marginVertical="15dp"
-                    android:paddingRight="15dp">
-
+                    android:gravity="center">
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="15dp"
+                        android:paddingLeft="15dp"
                         android:text="거리"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/tvListViewItemRecordDistance"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/rubik_one"
-                        android:text="6.4km"
+                        android:text="0.0km"
                         android:textColor="@color/black"
-                        android:textSize="24sp" />
+                        android:textSize="18sp" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="15dp"
+                        android:paddingLeft="15dp"
                         android:text="페이스"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/tvListViewItemRecordPace"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/rubik_one"
-                        android:text="5'11''"
+                        android:text="0'00''"
                         android:textColor="@color/black"
-                        android:textSize="24sp" />
+                        android:textSize="18sp" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
                     android:layout_marginVertical="15dp"
-                    android:paddingRight="15dp">
+                    android:gravity="center">
+
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="15dp"
+                        android:paddingLeft="15dp"
                         android:text="시간"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/tvListViewItemRecordTime"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/rubik_one"
-                        android:text="10:40"
+                        android:text="00:00"
                         android:textColor="@color/black"
-                        android:textSize="24sp" />
+                        android:textSize="18sp" />
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="15dp"
+                        android:paddingLeft="15dp"
                         android:text="케이던스"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/tvListViewItemRecordCadence"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/rubik_one"
-                        android:text="134"
+                        android:text="0"
                         android:textColor="@color/black"
-                        android:textSize="24sp" />
+                        android:textSize="18sp" />
                 </TableRow>
+
                 <TableRow
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="left"
-                    android:layout_marginVertical="15dp">
+                    android:layout_marginVertical="15dp"
+                    android:gravity="center">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="70dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/emblema_one"
-                        android:paddingHorizontal="15dp"
+                        android:paddingLeft="15dp"
                         android:text="걸음"
                         android:textColor="@color/black"
                         android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/tvListViewItemRecordSteps"
-                        android:layout_width="wrap_content"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/rubik_one"
-                        android:text="5218"
+                        android:text="0"
                         android:textColor="@color/black"
-                        android:textSize="24sp" />
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/emblema_one"
+                        android:paddingLeft="15dp"
+                        android:text="페이스"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:visibility="invisible" />
+
+                    <TextView
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/rubik_one"
+                        android:text="0'00''"
+                        android:textColor="@color/black"
+                        android:textSize="18sp"
+                        android:visibility="invisible" />
                 </TableRow>
 
 
             </TableLayout>
 
         </LinearLayout>
+
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="264dp"
+            tools:context=".ui.record.MapsActivity" />
+
         <!--
         <fragment xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -162,7 +221,9 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MapsActivity" />
+            tools:context=".ui.record.RecordFragment"/>
             -->
     </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
