--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -11,7 +11,6 @@
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="80dp"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical"
@@ -19,16 +18,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/tvSettingTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:fontFamily="@font/emblema_one"
-            android:text="설정"
-            android:textColor="@color/black"
-            android:textSize="24sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,9 +28,15 @@
                 android:id="@+id/btnLogout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:background="@drawable/btn_radius_big"
-                android:textColor="@color/white"
+                android:layout_marginTop="0dp"
+                android:background="@android:color/transparent"
+                android:textColor="@color/black"
+                android:textAlignment="textStart"
+                android:minHeight="0dp"
+                android:minWidth="0dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textSize="18sp"
                 android:text="로그아웃" />
 
         </LinearLayout>
