--- a/app/src/main/res/layout/layout_register.xml
+++ b/app/src/main/res/layout/layout_register.xml
@@ -50,7 +50,6 @@
             android:layout_marginBottom="40dp"
             android:fontFamily="@font/emblema_one"
             android:text="회원가입"
-            android:textColor="@color/black"
             android:textSize="24sp" />
 
         <LinearLayout
@@ -91,13 +90,34 @@
                 android:minHeight="48dp"
                 android:textColor="#000000" />
 
-            <EditText
-                android:id="@+id/etRegisterSex"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="성별(male or female)"
-                android:minHeight="48dp"
-                android:textColor="#000000" />
+                android:layout_height="wrap_content">
+
+                <Spinner
+                    android:id="@+id/spRegisterSex"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="48dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:ignore="SpeakableTextPresentCheck" />
+                <TextView
+                    android:id="@+id/tvSpHint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="3dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="성별"
+                    android:textSize="18sp"
+                    android:textColor="@android:color/darker_gray"
+                    android:background="#f9f9f9"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <EditText
                 android:id="@+id/etRegisterBirth"
